# anatoliamud

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  TODO  configure  configure.in
doc/: Anatolia3.1.txt  Install.txt  Makefile.am  Makefile.in  Readme.txt
doc/License/: Makefile.am  Makefile.in
doc/Merc-Docs/: Makefile.am  Makefile.in
doc/Old-readmes/: Anatolia2.0.txt  Makefile.am  Makefile.in
doc/Samples/: Conrad.implementor  Makefile.am  Makefile.in
doc/Updates/: Makefile.am  Makefile.in  WHATSNEW
etc/: Makefile.am  Makefile.in  anatolia.conf.in
lib/: Makefile.am  Makefile.in
lib/areas/: Makefile.am  Makefile.in  anatolia.are  help.are
lib/gods/: Makefile.am  Makefile.in
lib/notes/: Makefile.am  Makefile.in
lib/players/: Makefile.am  Makefile.in
lib/remort/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  Makefile.original  act_comm.c  act_hera.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  anatolia.h  ban.c  comm.c  config.h  config.h.in  const.c  db.c  db.h  db2.c  effects.c  fight.c  flags.c  handler.c  healer.c  interp.c  interp.h  lookup.c  lookup.h  magic.c  magic.h  magic2.c  martial_art.c  mob_prog.c  note.c  obj_prog.c  quest.c  recycle.c  recycle.h  save.c  skills.c  special.c  (+4 more)
var/: Makefile.am  Makefile.in
var/log/: Makefile.am  Makefile.in
var/run/: Makefile.am  Makefile.in
